fix add new can not jump to home

--- a/css/todo.css
+++ b/css/todo.css
@@ -15,7 +15,7 @@
     display: inline-block;
 }
 .add_button {
-    margin: 10px 0px 10px 0px;
+    margin: 10px 0 10px 0;
 }
 .checkbox {
     margin-top: 20px;
